--- a/chickenFeed.Rmd
+++ b/chickenFeed.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Chicken Feed"
-author: "put your name here"
-date: "2/29/2020"
+author: "Jose Trejo"
+date: "3/03/2020"
 output: html_document
 ---
 
