--- a/chickenFeed.Rmd
+++ b/chickenFeed.Rmd
@@ -37,6 +37,14 @@ attach(chickenData)
 
 <!-- plot chicken weight against each of the three explanatory variables.  Weight against a categorial varable is a boxplot, weight against a numerical variable is a scatter plot !-->
 
+Boxplot of weight based on feed 
+
+```{r}
+plot(weight~feed,data=chickenData)
+```
+
+
+
 
 ### Numerical summary
 
