--- a/chickenFeed.Rmd
+++ b/chickenFeed.Rmd
@@ -68,10 +68,14 @@ This is a summary on all the data in the chickendata.
 
 ### Inference -- Analysis of Variance
 
-
+```{r}
+model1=lm(weight~feed+speed+sex,data=chickenData)
+anova(model1)
+```
+This anova says only feed affects chicken weigh.
 
 ###  Conclusions  -- which variables affect chicken weight?
 
-
+Here is my brilliant conclusion
 
 
